# kafka-link

./: .dockerignore  .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/web/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  styles.css
apps/web/src/app/: app-layout.tsx  router.tsx
apps/web/src/components/: app-sidebar.tsx  metric-card.tsx  theme-toggle.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  select.tsx  table.tsx  tabs.tsx
apps/web/src/lib/api/: client.ts  types.ts
apps/web/src/lib/realtime/: subscribe.ts  use-live-refresh.ts
apps/web/src/pages/: alerts.loader.ts  alerts.tsx  city-detail.loader.ts  city-detail.tsx  earthquakes.loader.ts  earthquakes.tsx  kafka.loader.ts  kafka.tsx  overview.loader.ts  overview.tsx
infra/: python-service.Dockerfile  web.Dockerfile
infra/kafka/: create-topics.sh
services/alert-engine/: pyproject.toml
services/alert-engine/src/kafka_link_alert_engine/: main.py
services/alert-engine/tests/: test_alert_engine.py
services/analytics/: pyproject.toml
services/analytics/src/kafka_link_analytics/: main.py
services/analytics/tests/: test_analytics.py
services/api/: pyproject.toml
services/api/src/kafka_link_api/: dependencies.py  main.py  runtime.py
services/api/src/kafka_link_api/routes/: cities.py  health.py  kafka.py  preset.py  rules.py  views.py  ws.py
services/api/src/kafka_link_api/services/: geocoder.py  kafka_status.py  pubsub_bridge.py  redis_store.py  websocket_hub.py
services/api/tests/: test_api_app.py
services/collector-airquality/: pyproject.toml
services/collector-airquality/src/kafka_link_collector_airquality/: main.py
services/collector-airquality/tests/: test_airquality_collector.py
services/collector-earthquake/: pyproject.toml
services/collector-earthquake/src/kafka_link_collector_earthquake/: main.py
services/collector-earthquake/tests/: test_earthquake_collector.py
services/collector-weather/: pyproject.toml
services/collector-weather/src/kafka_link_collector_weather/: main.py
services/collector-weather/tests/: test_weather_collector.py
services/processor/: pyproject.toml
services/processor/src/kafka_link_processor/: main.py
services/processor/tests/: test_processor.py
