[project]
name = "kafka-link"
version = "0.1.0"
description = "Kafka-based city environment intelligence platform"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["packages/shared/src", "services/api/src"]
testpaths = ["packages/shared/tests", "services/api/tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["packages/shared/src", "packages/shared/tests", "services/api/src", "services/api/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.uv.workspace]
members = ["packages/shared", "services/api"]
