[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-link-analytics"
version = "0.1.0"
description = "Analytics projector for kafka-link"
requires-python = ">=3.14"
dependencies = [
    "confluent-kafka>=2.14.0",
    "kafka-link-shared",
    "redis>=7.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
kafka-link-shared = { workspace = true }
